# xfce4-squeezebox-plugin

./: AUTHORS  ChangeLog  Jenkinsfile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  xfce4_rhythmbox_plugin.pws  xfce4_squeezebox_plugin.pws
backends/: Makefile.am  common.mk
backends/audacious/: squeezebox-au.c
backends/banshee/: squeezebox-ba.c
backends/consonance/: squeezebox-cs.c  squeezebox-cs.png.h
backends/exaile/: exaile-player-binding.h  exaile-player-binding.xml  squeezebox-ex.c  squeezebox-ex.png.h
backends/listen/: listen-player-binding.xml
backends/mpd/: Makefile.am  gmpd-private.h  gmpd.c  gmpd.h  settings-mpd.ui  squeezebox-mpd.c
backends/muine/: muine-player-binding.h
backends/pragha/: Makefile.am  squeezebox-pr.c
backends/quodlibet/: squeezebox-ql.c
backends/radiotray/: Makefile.am  radiotray-player-binding.xml  squeezebox-radiotray.c
backends/rhythmbox/: Makefile.am  playlistmanager.xml  rb-shell-binding.h  rb-shell-player-binding.h  shell.xml  squeezebox-rb.c
branches/xfce4.4/: AUTHORS  config.h.in
branches/xfce4.4/panel-plugin/: bmpx-player-binding.h  notifications-binding.h  player-bindings.sh  rb-shell-binding.h  rb-shell-player-binding.h  squeezebox-au.png.h  squeezebox.h
branches/xfce4.4/po/: POTFILES.in
branches/xfce4.6/: autogen.sh  config.h.in  configure.ac  configure.ac.in
branches/xfce4.6/backends/: Makefile.am
branches/xfce4.6/backends/consonance/: squeezebox-cs.c
branches/xfce4.6/backends/mpd/: Makefile.am  gmpd-private.h  gmpd.c  settings-mpd.ui  squeezebox-mpd.c
branches/xfce4.6/backends/muine/: Makefile.am
branches/xfce4.6/backends/quodlibet/: Makefile.am
branches/xfce4.6/backends/rhythmbox/: squeezebox-rb.c
branches/xfce4.6/debian/: changelog  control  files  watch
branches/xfce4.6/glade/: mpris-wizard.ui  settings.ui
branches/xfce4.6/panel-plugin/: Makefile.am  Makefile.in  notifications-binding.h  notifications.c  squeezebox-private.h  squeezebox.c  squeezebox.desktop.in.in  update.sh
branches/xfce4.6/po/: POTFILES.in  tr.po
branches/xfce4.6/redhat/: Makefile.in
branches/xfce4.6/themes/: default.ui
branches/xfce4.8/: config.h.in  configure.ac.in
branches/xfce4.8/backends/audacious/: audacious-player-binding.xml  squeezebox-au.c
branches/xfce4.8/backends/banshee/: Makefile.am  squeezebox-ba.c
branches/xfce4.8/backends/decibel/: decibel-player-binding.xml
branches/xfce4.8/backends/exaile/: Makefile.am  exaile-player-binding3.xml
branches/xfce4.8/backends/mpd/: gmpd.c
branches/xfce4.8/backends/muine/: muine-player-binding.h  squeezebox-mu.c
branches/xfce4.8/backends/quodlibet/: squeezebox-ql.c
branches/xfce4.8/debian/: changelog  control  copyright
branches/xfce4.8/glade/: settings.ui
branches/xfce4.8/panel-plugin/: squeezebox-private.h  squeezebox.desktop.in  squeezebox.h  xfce-shortcuts-grabber.c  xfce-shortcuts-grabber.h
branches/xfce4.8/po/: tr.po
branches/xfce4.8/redhat/: Makefile.in
debian/: Makefile.am  README.Debian  changelog  control  copyright  cron.d.ex  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex  xfce4-squeezebox-plugin-default.ex  xfce4-squeezebox-plugin.doc-base.EX
glade/: Makefile.am  settings.ui
panel-plugin/: Makefile.am  Makefile.in  audacious-player-binding.h  audacious-player-binding.xml  banshee-player-binding.xml  exaile-player-binding.h  exaile-player-binding.xml  mmkeys.c  mmkeys.h  muine-player-binding.xml  notifications.c  notifications.h  player-bindings.sh  ql-player-binding.sh  settings-mpd.ui  settings.c  settings.ui  squeezebox-au.c  squeezebox-ba.c  squeezebox-ba.png.h  squeezebox-bmp.c  squeezebox-cs.c  squeezebox-dbus.c  squeezebox-ex.c  squeezebox-mpd.c  squeezebox-mpd.png.h  squeezebox-mu.c  squeezebox-mu.png.h  squeezebox-private.h  squeezebox-ql.c  squeezebox-rb.c  squeezebox.c  squeezebox.desktop.in  squeezebox.desktop.in.in  squeezebox.h
po/: Makefile.in.in  POTFILES.in  POTFILES.skip  de.po  fr.po  tr.po  xfce4-squeezebox-plugin.pot  xfce4-squezebox-plugin.pot  xfce4-squuezebox-plugin.pot
redhat/: Makefile.in  xfce4-squeezebox-plugin.spec.in
themes/: wide-art.ui
trunk/: Makefile.am  README  THANKS  autogen.sh  config.h.in  configure.ac  configure.ac.in
trunk/backends/: Makefile.am  common.mk
trunk/backends/audacious/: Makefile.am  audacious-player-binding.h  audacious-player-binding.xml  squeezebox-au.c
trunk/backends/consonance/: Makefile.am  squeezebox-cs.c
trunk/backends/exaile/: exaile-player-binding.h  exaile-player-binding.xml  squeezebox-ex.c
trunk/backends/listen/: listen-player-binding.h
trunk/backends/mpd/: Makefile.am  gmpd-private.h  gmpd.c  gmpd.h  settings-mpd.ui  squeezebox-mpd.c
trunk/backends/muine/: squeezebox-mu.c
trunk/backends/quodlibet/: ql-player-binding.h  ql-player-binding.xml  squeezebox-ql.c  squeezebox-ql.png.h
trunk/backends/radiotray/: radiotray-player-binding.h  squeezebox-radiotray.c
trunk/backends/rhythmbox/: player.xml  squeezebox-rb.c  squeezebox-rb.png.h
trunk/debian/: Makefile.am  changelog  control  copyright  files  rules
trunk/glade/: Makefile.am  settings.ui
trunk/panel-plugin/: Makefile.am  Makefile.in  audacious-player-binding.xml  banshee-player-binding.h  bmpx-player-binding.xml  indent.sh  mmkeys.h  notifications-binding.xml  notifications.c  settings-mpd.ui  settings.c  settings.ui  squeezebox-au.c  squeezebox-ba.c  squeezebox-bmp.c  squeezebox-bmp.png.h  squeezebox-cs.c  squeezebox-ex.c  squeezebox-mpd.c  squeezebox-private.h  squeezebox-ql.c  squeezebox-rb.c  squeezebox.c  squeezebox.desktop.in  squeezebox.h  xfce-shortcuts-grabber.c
trunk/po/: LINGUAS  POTFILES.in  de.po  fr.po  tr.po
trunk/redhat/: Makefile.am  Makefile.in  xfce4-squeezebox-plugin.spec.in
trunk/themes/: wide.ui
